<?xml version="1.0"?>
<package format="2">
  <name>haptic_ros_driver</name>
  <version>0.0.0</version>
  <description>The haptic_ros_driver package</description>

  <maintainer email="jacknlliu@gmail.com">Jack Liu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

</package>
